--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "start": "nodemon --exec babel-node src/index.js"
   },
   "dependencies": {
-    "dotenv": "^8.2.0"
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1"
   },
   "devDependencies": {
     "@babel/core": "^7.13.16",
