--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "start": "nodemon --exec babel-node src/index.js"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1"
   },
